--- a/docs/后台接口文档.md
+++ b/docs/后台接口文档.md
@@ -16,14 +16,7 @@ password|是|用户密码
 ```javascript
 {"username":"root","password","123456"}
 ```
-+ 返回说明
-参数|说明
---|--
-success|登录成功
-error|登录失败
-+ 示例
-```javascript
-//success
++ 返回说明cess
 {"success":true}
 //error 1000 用户名错误  1001 密码错误
 ```
